using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings : MonoBehaviour
{
   internal static string isMoving = "isMoving";
   internal static string isRunning = "isRunning";
   internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "Jump";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isOnWall = "isOnWall";
    internal static string attack = "attack";
    internal static string hasTarget = "hasTarget";
    internal static string canMove = "canMove";
    internal static string isAlive = "isAlive";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string playerInRange = "playerInRange";
    internal static string attack_2 = "attack_2";
    internal static string isRage = "isRage";
    internal static string attack_1 = "attack_1";
    internal static string attack_3 = "attack_3";
    internal static string isShown = "isShown";

}
